<resources>
    <string name="app_name">Buzzify</string>

    <string name="hello_world">Hello Jesus!</string>
    <string name="action_settings">Settings</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="register">Register</string>
    <string name="register_error_msg">Sorry, we are unable to accept new registrations at this time.  Please try again later.</string>
    <string name="forgot_password">Forgot Your Password?</string>
    <string name="loginErrorMsg">Your username and/or password was incorrect. Please try again.</string>

    <string name="play_services_failed_connection">Could Not Connect to Google Play Services</string>
    <string name="retry">Retry</string>

    <string name="most_requested_songs">Most Requested Songs</string>
    <string name="popular_drinks">Ordered Drinks</string>
    <string name="vote_song">Vote!</string>
    <string name="order_drinks">Order Drinks!</string>
    <string name="share">Share</string>

    <string name="placeholder_song">Placeholder Title</string>
    <string name="placeholder_artist">Placeholder Artist</string>
    <string name="placeholder_songartist">Placeholder Title - Placeholder Artist</string>
    <string name="placeholder_album">Placeholder Album</string>
    <string name="placeholder_drink">Placeholder Drink</string>

    <string name="search_title">Search</string>
    <string name="search_hint">Enter a Song, Artist, or Album</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="songs">Songs</string>
    <string name="topSongs">Top Songs</string>

    <string name="profile_logo_content_description">Logo</string>
    <string name="profile_title_logged_in">Your are logged in as</string>
    <string name="profile_logout_button_label">Log out</string>
    <string name="profile_title_logged_out">You must be logged in to view your profile</string>
    <string name="profile_login_button_label">Log in</string>

    <string name="parse_app_id">0nZ8CuhAGPGo5Eq14w6lUBszJY6uD02CtojuN3dw</string>
    <string name="parse_client_key">FfAbDNX5GdbZERQv07PFeKshZWXKiCty4G9TDJkS</string>

    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>

    <string name="order_a_drink">Order A Drink!</string>
    <string name="order">Order</string>
    <string name="cancel">Cancel</string>
    <string name="edit_account_button_label">Edit account</string>
</resources>
